# intro-to-ai-23spring

./: .gitignore  README.md  pyproject.toml
hw0/: README.md  __main__.py  draw_bounding_box.py  pyproject.toml
hw0/scripts/: pack.sh
hw0/src/: data_augmentation.py  draw_bounding_box.py  remove_background.py
