[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["ruff>=0.0.252", "black>=23.1.0"]
[tool.pdm.scripts]
format = "black ."
lint = "ruff ."

[project]
name = "intro-to-ai"
version = "0.0.0"
description = "Introduction to Artificial Intellegence 2022 Spring"
authors = [{ name = "Li-Lun Lin", email = "alan469357@gmail.com" }]
dependencies = []
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.ruff]
select = ["E", "F", "I", "N"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
